...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1jZ-8o-lhN">
                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="aX0-tt-RhV"/>
                                    <constraint firstAttribute="width" constant="100" id="tcf-X4-Gnm"/>
                                </constraints>
                                <state key="normal" backgroundImage="LeftTop"/>
                                <connections>
                                    <action selector="leftTopButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XWb-6Z-xpI"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEd-dh-tdF">
                                <rect key="frame" x="314" y="0.0" width="100" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="jKz-yw-IZ5"/>
                                    <constraint firstAttribute="width" constant="100" id="tdW-29-kwJ"/>
                                </constraints>
                                <state key="normal" backgroundImage="RightTop"/>
                                <connections>
                                    <action selector="worldButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JtK-qw-ZiY"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.80392156859999997" green="0.80392156859999997" blue="0.80392156859999997" alpha="1" colorSpace="calibratedRGB"/>
...
