...
        CGFloat tButtonViewY = self.buttonRadius - anImage.size.height / 2;
        tButton.frame = CGRectMake(tButtonViewX, tButtonViewY, anImage.size.width, anImage.size.height);
    }

    [tButton setImage:anImage forState:UIControlStateNormal];
    tButton.tag = aTag + TAG_BUTTON_OFFSET;
    [tButton setTitle:@"Button" forState:UIControlStateNormal];
    tButton.contentHorizontalAlignment = UIControlContentHorizontalAlignmentRight;

    UIView* tInnerView = [[CKRoundView alloc] initWithFrame:CGRectMake(0.0, 0.0, self.buttonRadius * 2, self.buttonRadius * 2)];
    tInnerView.backgroundColor = self.innerViewColor;
    tInnerView.opaque = YES;
    tInnerView.clipsToBounds = NO;
...
